--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
   top: 0;
   transform: translateX(-50%);
   width: 100%;
-  height: 100%;
+  height: 90%;
   filter: blur(0.1vmin);
   background-image: radial-gradient(ellipse at top, transparent 0%, var(--dark-color)), radial-gradient(ellipse at bottom, var(--dark-color), rgba(145, 233, 255, 0.2)), repeating-linear-gradient(220deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), repeating-linear-gradient(189deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), repeating-linear-gradient(148deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), linear-gradient(90deg, rgb(126, 23, 151), rgb(240, 240, 240));
 }
@@ -36,8 +36,15 @@ body {
   transform: scale(0.9);
 }
 
+.title{
+  color: #f0ecf3;
+  position: fixed;
+  font-weight: 200;
+  font-size: 50px;
+}
+
 .flower {
-  position: absolute;
+  position: fixed;
   bottom: 10vmin;
   transform-origin: bottom center;
   z-index: 10;
