--- a/css/main.css
+++ b/css/main.css
@@ -171,8 +171,8 @@ body {
   width: 8vmin;
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
-  background-color: #8A2BE2;
-  background-image: linear-gradient(to top, #8A2BE2, #8A2BE2);
+  background-color: #c01205;
+  background-image: linear-gradient(to top, #c01205, #c01205);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
@@ -192,7 +192,7 @@ body {
   transform-origin: bottom left;
   border-radius: 4vmin 10vmin 4vmin 4vmin;
   transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  background-image: linear-gradient(to top, #8A2BE2, #8A2BE2);
+  background-image: linear-gradient(to top, #c01205, #c01205);
   z-index: 1;
   opacity: 0.8;
 }
@@ -203,7 +203,7 @@ body {
   width: 9vmin;
   height: 4vmin;
   border-radius: 50%;
-  background-color: #4169E1;
+  background-color: #f18d09;
 }
 .flower__white-circle::after {
   content: "";
