--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ body {
   transform: translate(-50%, -100%);
   width: 8vmin;
   height: 8vmin;
-  background-color: #413f3f;
+  background-color: #242627;
   filter: blur(10vmin);
 }
 .flower__leaf {
@@ -171,8 +171,8 @@ body {
   width: 8vmin;
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
-  background-color: #e42012  ;
-  background-image: linear-gradient(to top, #e42012, #e42012);
+  background-color: #2d3030  ;
+  background-image: linear-gradient(to top, #1696e0, #1690c9);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
@@ -192,7 +192,7 @@ body {
   transform-origin: bottom left;
   border-radius: 4vmin 10vmin 4vmin 4vmin;
   transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  background-image: linear-gradient(to top, #e42012, #e42012);
+  background-image: linear-gradient(to top, #10bbe6, #12aedd);
   z-index: 1;
   opacity: 0.8;
 }
@@ -203,7 +203,7 @@ body {
   width: 9vmin;
   height: 4vmin;
   border-radius: 50%;
-  background-color: #474849;
+  background-color: #616366;
 }
 .flower__white-circle::after {
   content: "";
