--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     font-family: 'Poppins',cursive;
 }
 body{
-    color:  #800080;
+    color:  #1491e4;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -23,8 +23,8 @@ body{
 }
 @keyframes glow{    
     0%, 100%{
-        color:  #800080;
-        text-shadow: 0 0 12px #00b6e6, 0 0 50px #00b6e6, 0 0 100px #00b6e6;
+        color:  #1d79cf;
+        text-shadow: 0 0 12px #5d6769, 0 0 50px #363838, 0 0 100px #19191a;
     }
     10%, 90%{
         color: #111;
